tests/typing/good/testfile-typed-1.rs


fn main() {
    let x : i32 = 0;

    let y : i32 = 0;

    if x + y == 0 {
    }
}