tests/typing/bad/testfile-const-2.rs


const T : usize = C;

const C : usize = T;


fn main() {
    
}